base.css&covers.js minor fix

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'Inter Tight';
-  src: url('../../fonts/InterTight-Medium/InterTight-Semibold.ttf');
+  src: url('../fonts/InterTight-SemiBold.ttf') format('truetype');
   font-style: normal;
   font-weight: 500;
 }
@@ -57,7 +57,7 @@ img {
 }
 
 body {
-  font-family: 'Inter Tight';
+  font-family: 'Inter Tight', sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: var(--white);
